Enable topic gardener by default in runner

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ CURSOR_API_KEY=
 
 # Optional: openai | cursor | gemini (default: auto from which key is set)
 # TOCIFY_BACKEND=
+
+# Runner weekly only: topic gardener is on by default; set to 0/false/no to disable.
+# TOPIC_GARDENER=0
