Route runner AI flows through selected backend

--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,12 @@ OPENAI_MODEL=gpt-4o-mini
 GEMINI_API_KEY=
 GEMINI_MODEL=gemini-2.0-flash
 
-# Cursor CLI: needs `agent` on PATH and this key.
+# Cursor CLI: backend requires `agent` on PATH and this key.
 CURSOR_API_KEY=
 
 # Optional: openai | cursor | gemini (default: auto from which key is set)
 # TOCIFY_BACKEND=
 
 # Runner weekly only: topic gardener is on by default; set to 0/false/no to disable.
+# Runner AI steps (weekly/monthly/annual + gardener/redundancy) follow TOCIFY_BACKEND.
 # TOPIC_GARDENER=0
