--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tocify"
-version = "0.2.1"
+version = "0.2.2"
 description = "Weekly Journal ToC Digest (RSS → triage → digest) and vault runner"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -26,3 +26,8 @@ tocify = "tocify.runner.cli:main"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["tocify*"]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
