--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tocify"
-version = "0.2.2"
+version = "0.3.0"
 description = "Weekly Journal ToC Digest (RSS → triage → digest) and vault runner"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -18,6 +18,9 @@ dependencies = [
     "google-genai>=0.6.0",
     "tqdm",
     "newspaper3k",
+    "mdformat>=1.0.0",
+    "mdformat-frontmatter>=0.0.1",
+    "mdformat-footnote>=0.1.0",
 ]
 
 [project.scripts]
