--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.10"
 license = { text = "MIT" }
 dependencies = [
     "feedparser>=6.0.0",
+    "requests>=2.28.0",
     "python-dateutil>=2.9.0",
     "python-dotenv>=1.0.0",
     "openai>=1.0.0",
