new: clear out cursor json artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,9 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 .cursor/
+#  Tocify/Cursor runner: generated and helper JSON (e.g. topic_actions_*.json, Cursor-produced action files)
+content/logs/*.json
+*action*.json
 
 # Marimo
 marimo/_static/
@@ -210,3 +213,4 @@ __marimo__/
 # uv
 uv.lock
 
+test_vault/
