new: extend search through historic archives (also current)

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,11 @@ CURSOR_API_KEY=
 # Runner weekly only: topic gardener is on by default; set to 0/false/no to disable.
 # Runner AI steps (weekly/monthly/annual + gardener/redundancy) follow TOCIFY_BACKEND.
 # TOPIC_GARDENER=0
+
+# Weekly brief: include OpenAlex (scholarly works) and/or NewsAPI for each week's date range. Topic-derived search is used.
+# OpenAlex: no API key required. Default on.
+WEEKLY_OPENALEX=1
+# News: set NEWS_BACKEND=newsapi and one of the keys below. Free tier = last 30 days only; for older weeks use NewsAPI paid or omit.
+# NEWS_BACKEND=newsapi
+# NEWS_API_KEY=
+# NEWSAPI_API_KEY=
