--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tocify"
-version = "0.6.1"
+version = "0.7.0"
 description = "Weekly Journal ToC Digest (RSS → triage → digest) and vault runner"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -19,6 +19,7 @@ dependencies = [
     "google-genai>=0.6.0",
     "tqdm",
     "newspaper3k",
+    "lxml_html_clean",
     "mdformat>=1.0.0",
     "mdformat-frontmatter>=0.0.1",
     "mdformat-footnote>=0.1.0",
@@ -35,10 +36,11 @@ include = ["tocify*"]
 [dependency-groups]
 dev = [
     "ruff>=0.8.0",
+    "vulture>=2.11",
 ]
 
 [tool.ruff]
 target-version = "py310"
 
 [tool.ruff.lint]
-select = ["F401", "F841", "E401"]
+select = ["F401", "F841", "E401", "B", "UP"]
