--- a/.github/workflows/weekly-runner.yml
+++ b/.github/workflows/weekly-runner.yml
@@ -7,6 +7,9 @@ on:
         description: "Runner topic to process"
         required: false
         default: "bci"
+  # Example weekly schedule for forks (disabled in this repo):
+  # schedule:
+  #   - cron: "0 9 * * 1" # Mondays 09:00 UTC
 
 env:
   RUNNER_TOPIC: ${{ github.event.inputs.topic || 'bci' }}
