--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tocify"
-version = "0.9.7"
+version = "0.9.8"
 description = "Weekly Journal ToC Digest (RSS → triage → digest) and vault runner"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -32,6 +32,9 @@ tocify-test = "tocify.runner._test_cli:main"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["tocify*"]
+
+[tool.setuptools.package-data]
+tocify = ["templates/*.md"]
 
 [dependency-groups]
 dev = [
