--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tocify"
-version = "0.9.8"
+version = "0.9.9"
 description = "Weekly Journal ToC Digest (RSS → triage → digest) and vault runner"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -34,7 +34,7 @@ where = ["."]
 include = ["tocify*"]
 
 [tool.setuptools.package-data]
-tocify = ["templates/*.md"]
+tocify = ["templates/*.md", "templates/*.txt"]
 
 [dependency-groups]
 dev = [
