new: csv2md for articles database

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tocify"
-version = "0.9.7"
+version = "0.10.0"
 description = "Weekly Journal ToC Digest (RSS → triage → digest) and vault runner"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -23,6 +23,7 @@ dependencies = [
     "mdformat>=1.0.0",
     "mdformat-frontmatter>=0.0.1",
     "mdformat-footnote>=0.1.0",
+    "csv2md>=1.5.0",
 ]
 
 [project.scripts]
